# extrapanel-sdk

./: .gitignore  LICENSE  README.md  dub.json  meson.build
source/: app.d  meson.build
source/extrapanel/sdk/: bootstrapper.d  packager.d  plugin.d  tester.d  util.d
src/: bootstrapper.d  main.d  meson.build  packager.d  plugin.d  tester.d  util.d
