source_dir = include_directories('.')


sources += ['source/app.d',
            'source/extrapanel/sdk/bootstrapper.d',
            'source/extrapanel/sdk/packager.d',
            'source/extrapanel/sdk/tester.d',
            'source/extrapanel/sdk/util.d',
            'source/extrapanel/sdk/plugin.d']